--- a/humanstxt/humanstxt/en.lproj/ViewController.xib
+++ b/humanstxt/humanstxt/en.lproj/ViewController.xib
@@ -39,13 +39,13 @@
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUINavigationBar" id="794016746">
+					<object class="IBUINavigationBar" id="856485265">
 						<reference key="NSNextResponder" ref="774585933"/>
 						<int key="NSvFlags">290</int>
 						<string key="NSFrameSize">{320, 44}</string>
 						<reference key="NSSuperview" ref="774585933"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="343288556"/>
+						<reference key="NSNextKeyView" ref="315223106"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIBarStyle">1</int>
@@ -54,14 +54,14 @@
 							<bytes key="NSRGB">MC4xNDExNzY0NzcxIDAuMTQxMTc2NDc3MSAwLjE2MDc4NDMxOQA</bytes>
 						</object>
 						<array key="IBUIItems">
-							<object class="IBUINavigationItem" id="774756491">
-								<reference key="IBUINavigationBar" ref="794016746"/>
+							<object class="IBUINavigationItem" id="570540149">
+								<reference key="IBUINavigationBar" ref="856485265"/>
 								<string key="IBUITitle"/>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
 						</array>
 					</object>
-					<object class="IBUIImageView" id="343288556">
+					<object class="IBUIImageView" id="315223106">
 						<reference key="NSNextResponder" ref="774585933"/>
 						<int key="NSvFlags">256</int>
 						<string key="NSFrame">{{116, 6}, {88, 31}}</string>
@@ -78,7 +78,7 @@
 							<string key="NSResourceName">humanstxt-transparent-color.png</string>
 						</object>
 					</object>
-					<object class="IBUISearchBar" id="19290394">
+					<object class="IBUISearchBar" id="702059112">
 						<reference key="NSNextResponder" ref="774585933"/>
 						<int key="NSvFlags">290</int>
 						<string key="NSFrame">{{0, 44}, {320, 44}}</string>
@@ -92,7 +92,7 @@
 						<string key="IBPlaceholder">URL</string>
 						<object class="NSColor" key="IBTintColor">
 							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MSAwLjUwMTk2MDgxNCAwAA</bytes>
+							<bytes key="NSRGB">MC45MDE5NjA3OTAyIDAuOTAxOTYwNzkwMiAwLjkwMTk2MDc5MDIAA</bytes>
 						</object>
 						<object class="IBUITextInputTraits" key="IBTextInputTraits">
 							<int key="IBUIKeyboardType">3</int>
@@ -103,7 +103,7 @@
 							<string>Title</string>
 						</array>
 					</object>
-					<object class="IBUITableView" id="130890973">
+					<object class="IBUITableView" id="500581586">
 						<reference key="NSNextResponder" ref="774585933"/>
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{0, 88}, {320, 372}}</string>
@@ -128,7 +128,7 @@
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="794016746"/>
+				<reference key="NSNextKeyView" ref="856485265"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">2</int>
 					<bytes key="NSRGB">MSAxIDEAA</bytes>
@@ -152,7 +152,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">theSearchBar</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="19290394"/>
+						<reference key="destination" ref="702059112"/>
 					</object>
 					<int key="connectionID">26</int>
 				</object>
@@ -160,14 +160,14 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">theTableView</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="130890973"/>
+						<reference key="destination" ref="500581586"/>
 					</object>
 					<int key="connectionID">28</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">delegate</string>
-						<reference key="source" ref="19290394"/>
+						<reference key="source" ref="702059112"/>
 						<reference key="destination" ref="372490531"/>
 					</object>
 					<int key="connectionID">24</int>
@@ -175,7 +175,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">dataSource</string>
-						<reference key="source" ref="130890973"/>
+						<reference key="source" ref="500581586"/>
 						<reference key="destination" ref="372490531"/>
 					</object>
 					<int key="connectionID">29</int>
@@ -183,7 +183,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">delegate</string>
-						<reference key="source" ref="130890973"/>
+						<reference key="source" ref="500581586"/>
 						<reference key="destination" ref="372490531"/>
 					</object>
 					<int key="connectionID">30</int>
@@ -212,39 +212,39 @@
 						<int key="objectID">6</int>
 						<reference key="object" ref="774585933"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="794016746"/>
-							<reference ref="343288556"/>
-							<reference ref="130890973"/>
-							<reference ref="19290394"/>
+							<reference ref="856485265"/>
+							<reference ref="315223106"/>
+							<reference ref="500581586"/>
+							<reference ref="702059112"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">11</int>
-						<reference key="object" ref="794016746"/>
+						<reference key="object" ref="856485265"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="774756491"/>
+							<reference ref="570540149"/>
 						</array>
 						<reference key="parent" ref="774585933"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">12</int>
-						<reference key="object" ref="774756491"/>
-						<reference key="parent" ref="794016746"/>
+						<reference key="object" ref="570540149"/>
+						<reference key="parent" ref="856485265"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">14</int>
-						<reference key="object" ref="343288556"/>
+						<reference key="object" ref="315223106"/>
 						<reference key="parent" ref="774585933"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">22</int>
-						<reference key="object" ref="19290394"/>
+						<reference key="object" ref="702059112"/>
 						<reference key="parent" ref="774585933"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">23</int>
-						<reference key="object" ref="130890973"/>
+						<reference key="object" ref="500581586"/>
 						<reference key="parent" ref="774585933"/>
 					</object>
 				</array>
